--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -1141,7 +1141,27 @@ $d^nf(x)=d(d^{n-1}f(x))=f^{(n)}(x)dx^n$
 \\Производные высших порядков используются для вычисления приблизительных значений функций.
 
 \setcounter{chapter}{21}
-
+\chapter{Дифференцирование функции, заданной параметрически}
+Зависимость функции $y$ от аргумента $x$ может осуществляться через посредство третьей переменной $t$, называемой параметром:
+\begin{equation}
+	\begin{cases}
+	x=\phi(t),\\
+	y=\psi(t)
+	\end{cases}
+\end{equation}
+В этом случае говорят, что функция y от x задана параметрически. Параметрическое задание функции удобно тем, что оно дает общую запись для прямой и обратной функций.
+Предположим, что на некотором промежутке функции $x=\phi(t)$
+ и $y=\psi(t)$ имеют производные,
+  причем $\phi'(t)\neq0$.
+   Кроме того, для $x=\phi(t)$ существует обратная функция $x^{-1} = t(x)$ (производная обратной функции равна обратной величине производной прямой функции).\\
+   Тогда $y(x)=\psi(t(x))$ - сложная функция и ее производная:\\
+   $y_x'=\psi_t'\cdot t_x'=\dfrac{y_t'}{x_t'}$. Производную тоже запишем в параметрической форме: 
+  \begin{equation}
+	\begin{cases}
+	x=\phi(t),\\
+	y_x'=\dfrac{y_t'}{x_t'}
+\end{cases}
+\end{equation}
 \setcounter{chapter}{22}
 \chapter{Локальный экстремум функции, теорема Ферма}
 
@@ -1362,7 +1382,7 @@ $f(x_{0})=\lim_{x \to x_{0}} f(x) = 0$ и $g(x_{0})=\lim_{x \to x_{0}} g(x) = 0$
   \setcounter{chapter}{25}         
 
 \setcounter{chapter}{26}         
-\chapter{Признаки монотонности функции}         
+\chapter{Признаки монотонности функции\\}         
 
 Функция y = f\left( x \right) называется \\ 
 \begin{itemize}
@@ -1382,8 +1402,75 @@ $f(x_{0})=\lim_{x \to x_{0}} f(x) = 0$ и $g(x_{0})=\lim_{x \to x_{0}} g(x) = 0$
 Если функция $f\left( x \right)$ дифференцируема на интервале $\left( {a,b} \right)$ и принадлежит к одному из четырех рассмотренных типов
 (т.е. является возрастающей, строго возрастающей, убывающей или строго убывающей), то такая функция называется монотонной на данном интервале. 
 \setcounter{chapter}{27}         
+\chapter{Необходимое и достаточное условие существования экстремума функции\\}
+\section{Первое необходимое условие}
+\begin{thm}
+Пусть фунеция $y=f(x)$ дифференцируема на $(a;b)$ и в точке $x_0 \in (a;b) f'(x_0) = 0$. Если при переходе через $x_0$
+производная функции меняет знак, то $x_0$  - точка локального экстремума. $+ \rightarrow -$ максимума, и $- \rightarrow +$ - минимума. 
+\begin{proof}
+Пусть, например, ${f}'$ меняет знак с «-» на «+». Рассмотрим точку $x_{0}$ на сегменте $\left [ x;x_{0} \right ]$. Воспользуемся теоремой о конечных приращениях Лагранжа: $f(x)-f(x_{0}) ={f}'(\xi)(x-x_{0}), \xi \in (x;x_{0})$. Поскольку при переходе через точку $x_{0}$ функция меняет знак с «-» на «+», то ${f}'(\xi)<0 и x< x_{0}, то x- x_{0}<0 f(x)-f(x_{0})>0$.
+Аналогично рассмотрим сегмент $\left [ x_{0};x \right ]$, получим
+$f(x)-f(x_{0})>0 \Rightarrow f(x_{0})< f(x) \Rightarrow   x_{0}$ — точка строгого минимума функции.
+\end{proof}
+\end{thm}
+\section{Второе достаточное условие}
+\beign{thm}
+Пусть дана функция $f(x)$, она определена в некоторой окрестности точки $x_{0}$ , ее первая производная ${f}'(x_{0})=0$ и пусть $\exists {f}''(x_{0})$, тогда:
+\begin{enumerate}
+    \item Если ${f}''(x_{0})>0$, то точка $x_{0}$ — точка строгого минимума;
+    \item Если ${f}''(x_{0})<0$, то точка $x_{0}$ — точка строгого максимума.
+\end{enumerate}
+\begin{proof}
+Докажем теорему для первого случая, когда ${f}''(x_{0})>0$. По скольку ${f}''(x_{0})$ непрерывна, то на достаточно малом интервале $(x_{0}-\delta ;x_{0}+\delta)$, т.к ${f}''(x_{0})>0$, то ${f}'(x_{0})$ возрастает в этом интервале. ${f}'(x_{0})=0$, значит ${f}'(x_{0})<0$ на интервале $(x_{0}-\delta ;x_{0})$ и  ${f}'(x_{0})>0$ на интервале $(x_{0} ;x_{0}+\delta)$.
+Таким образом функция $f(x)$ убывает на интервале $(x_{0}-\delta ;x_{0})$ и возрастает на интервале $(x_{0} ;x_{0}+\delta)$ $\Rightarrow$ по первому достаточному условию экстремума функция в точке $x_{0}$ имеет минимум.
+Аналогично доказывается второй случай теоремы.
+\end{proof}
+\end{thm}
+
 
 \setcounter{chapter}{28}
+\chapter{Направление выпуклости и перегибы прямой}
+
+Рассмотрим функцию $y = f\left( x \right)$, которая является непрерывной в точке ${x_0}$. Функция $f\left( x \right)$ может иметь в этой точке конечную или бесконечную производную $f'\left( {{x_0}} \right)$. Если при переходе через ${x_0}$ функция меняет направление выпуклости, т.е. существует число $\delta > 0$, такое, что на одном из интервалов $\left( {{x_0} - \delta ,{x_0}} \right)$ или $\left( {{x_0},{x_0} + \delta } \right)$ функция является выпуклой вверх, а на другом − выпуклой вниз, то ${x_0}$ называется точкой перегиба функции $y = f\left( x \right)$.
+
+Геометрический смысл точки перегиба состоит в том, что график функции $f\left( x \right)$ переходит в этой точке с одной стороны касательной на другую, т.е. кривая и касательная взаимно пересекаются (рисунок 1).
+
+График функции $f\left( x \right)$ в окрестности точки перегиба ${x_0}$ расположен внутри одной пары вертикальных углов, образованных касательной и нормалью (рисунок 2).
+\begin{figure}
+\centering
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.7\linewidth]{./pics/yyy.jpg}
+  \caption{рис 1}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.7\linewidth]{./pics/yyy2.jpg}
+  \caption{рис 2}
+\end{subfigure}
+\end{figure}
+{\textbf Необходимое условие существования точки перегиба} \\
+Если ${x_0}$ − точка перегиба функции $f\left( x \right)$ и данная функция имеет вторую производную в некоторой окрестности точки ${x_0}$, причем в точке ${x_0}$ она непрерывна, то $f''\left( {{x_0}} \right) = 0$.
+\begin{proof}\\
+Предположим, что в точке перегиба ${x_0}$ вторая производная не равна нулю: $f''\left( {{x_0}} \right) \ne 0$. Поскольку она непрерывна при ${x_0}$, то существует $\delta-$окрестность точки ${x_0}$, в которой вторая производная сохраняет свой знак, т.е.
+$f''\left( {{x_0}} \right) < 0\;\;\text{или}\;\;f''\left( {{x_0}} \right) < 0\;\forall \;x \in \left( {{x_0} - \delta ,{x_0} + \delta } \right).$
+В таком случае функция будет либо строго выпукла вверх (при $f''\left( x \right) < 0$), либо строго выпукла вниз (при $f''\left( x \right) > 0$). Но тогда точка ${x_0}$ не является точкой перегиба. Следовательно, предположение неверно и вторая производная в точке перегиба должна быть равна нулю.
+\end{proof}\\
+{\textb Первое достаточное условие существования точки перегиба} \\ 
+Если функция $f\left( x \right)$ непрерывна и дифференцируема в точке ${x_0}$, имеет вторую производную $f''\left( {{x_0}} \right)$ в некоторой проколотой $\delta-$окрестности точки ${x_0}$ и если вторая производная меняет знак при переходе через точку ${x_0}$, то ${x_0}$ является точкой перегиба функции $f\left( x \right)$.
+\begin{proof}
+Пусть, например, вторая производная $f''\left( x \right)$ при переходе через точку ${x_0}$ меняет знак с плюса на минус. Следовательно, в левой $\delta-$окрестности $\left( {{x_0} - \delta ,{x_0}} \right)$ выполняется неравенство $f''\left( x \right) > 0$, а в правой $\delta-$окрестности $\left( {{x_0},{x_0} + \delta } \right)$ справедливо неравенство $f''\left( x \right) < 0$.
+
+В таком случае, согласно достаточным условиям выпуклости, функция $f\left( x \right)$ выпукла вниз в левой $\delta-$окрестности точки ${x_0}$ и выпукла вверх в правой $\delta-$окрестности.
+
+Следовательно, в точке ${x_0}$ функция меняет направление выпуклости, т.е. c является, по определению, точкой перегиба.
+Второе достаточное условие существования точки перегиба
+\end{proof}\\
+Пусть $f''\left( {{x_0}} \right) = 0, f'''\left( {{x_0}} \right) \ne 0$. Тогда точка ${x_0}$ является точкой перегиба функции $f\left( x \right)$.
+
+\begin{proof}
+Поскольку f'''\left( {{x_0}} \right) \ne 0, то вторая производная в точке {x_0} либо строго возрастает (если f'''\left( {{x_0}} \right) > 0), либо строго убывает (если f'''\left( {{x_0}} \right) < 0). Так как f''\left( {{x_0}} \right) = 0, то вторая производная при некотором \delta > 0 имеет разные знаки в левой и правой \delta-окрестности точки {x_0}. Отсюда, на основании предыдущей теоремы, следует что {x_0} − точка перегиба функции f\left( x \right).
+\end{proof}\\
 
 \setcounter{chapter}{29}
 \chapter{Комплексные числа и действия над ними. Формы записи комплексного числа}
