--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -2193,6 +2193,135 @@ $\vec{AB}$ и $\vec{BA}$ противоположные, значит $\vec{AB}=
  	\item $\lambda < 0$, то $\lambda\vec{a} \uparrow\downarrow \vec{a}$ и имеющий длинну $l=\lambda \mid{a}\mid}$
 \end{enumerate}
 
+
+
+\setcounter{chapter}{42}
+\chapter{Прямая на плоскости}
+
+
+
+Общее уравнение прямой в декартовой системе координат:
+Ax + By + C = 0,
+где x, y − координаты точек прямой, A, B, C − действительные числа при условии {A^2} + {B^2} \ne 0.
+
+$\bullet$ Нормальный вектор к прямой \\
+Пусть прямая задана общим уравнением
+$Ax + By + C = 0$, Тогда вектор $\mathbf{n}\left( {A,B} \right)$, координаты которого равны коэффициентам $A, B,$ является вектором нормали к данной прямой.\\
+\begin{center}
+\includegraphics[scale=0.4]{./pics/2.jpg}
+\end{center}
+
+$\bullet$ Уравнение прямой с угловым коэффициентом \\
+$y = kx + b$
+Здесь коэффициент $k = \tan\alpha$ называется угловым коэффициентом прямой, $а$ число $b$ является координатой точки пересечения прямой с осью Oy.
+
+\begin{center}
+\includegraphics[scale=0.4]{./pics/3.jpg}
+\end{center}
+
+Угловой коэффициент прямой определяется соотношением \\
+$k = \tan \alpha = \large\frac{{{y_2} - {y_1}}}{{{x_2} - {x_1}}}\normalsize$,
+где $A\left( {{x_1},{y_1}} \right), B\left( {{x_2},{y_2}} \right)$ − координаты двух точек прямой.
+угловой коэффициент
+
+\begin{center}
+\includegraphics[scale=0.4]{./pics/4.jpg}
+\end{center}
+
+$\bullet$  Уравнение прямой по точке и угловому коэффициенту
+$y = {y_0} + k\left( {x - {x_0}} \right)$,
+где k − угловой коэффициент, а точка $P\left( {{x_0},{y_0}} \right)$ принадлежит прямой.
+уравнение прямой по заданной точке и угловому коэффициенту
+
+\begin{center}
+\includegraphics[scale=0.4]{./pics/5.jpg}
+\end{center}
+
+$\bullet$ Уравнение прямой, проходящей через две точки  
+$\large\frac{{y - {y_1}}}{{{y_2} - {y_1}}}\normalsize = \large\frac{{x - {x_1}}}{{{x_2} - {x_1}}}\normalsize$  или $ \left| {\begin{array}{*{20}{c}} x & y & 1\\ {{x_1}} & {{y_1}} & 1\\ {{x_2}} & {{y_2}} & 1 \end{array}} \right| = 0$.
+уравнение прямой, проходящей через две точки
+
+\begin{center}
+\includegraphics[scale=0.4]{./pics/6.jpg}
+\end{center}
+
+$\bullet$ Уравнение прямой в отрезках имеет вид
+$\large\frac{x}{a}\normalsize + \large\frac{y}{b}\normalsize = 1$,
+где a и b соответствуют отрезкам, отсекаемым прямой на осях $Ox$ и $Oy$.
+уравнение прямой в отрезках
+\begin{center}
+\includegraphics[scale=0.4]{./pics/7.jpg}
+\end{center}
+
+$\bullet$ Нормальное уравнение прямой  
+$x\cos \beta + y\sin \beta - p = 0$
+Здесь $\cos \beta$ и $\sin\beta = \cos \left( {90^\circ - \beta} \right)$ представляют собой направляющие косинусы вектора нормали. Параметр p равен расстоянию прямой от начала координат.
+нормальное уравнение прямой
+\begin{center}
+\includegraphics[scale=0.4]{./pics/8.jpg}
+\end{center}
+
+$\bullet$ Уравнение прямой по точке и направляющему вектору  
+$\large\frac{{x - {x_1}}}{X}\normalsize = \large\frac{{y - {y_1}}}{Y}\normalsize$,
+где вектор $\mathbf{s}\left( {X,Y} \right)$ направлен вдоль прямой, а точка $P\left( {{x_1},{y_1}} \right)$ лежит на этой прямой. Данное уравнение называется также каноническим уравнением прямой.
+уравнение прямой по точке и направляющему вектору
+
+\begin{center}
+\includegraphics[scale=0.4]{./pics/9.jpg}
+\end{center}
+
+$\bullet$ Уравнение прямой в векторной форме
+$\mathbf{r}= \mathbf{a} + t\mathbf{b}$,
+где вектор $\mathbf{a}$ проведен из начала координат к некоторой точке A с известными координатами, лежащей на данной прямой. Вектор $\mathbf{b}$ определяет направление прямой. Вектор $\mathbf{r} = \mathbf{OX}$ представляет собой позиционный вектор, направленный из начала координат к произвольной точке X данной прямой. Число t является параметром, изменяющимся от $- \infty $до$ \infty$.
+
+\begin{center}
+\includegraphics[scale=0.4]{./pics/12.jpg}
+\end{center}
+
+$\bullet$ Уравнение прямой в параметрической форме
+$\left\{ \begin{aligned} x &= {a_1} + t{b_1} \\ y &= {a_2} + t{b_2} \end{aligned} \right.$,
+где $\left( {{a_1},{a_2}} \right)$ являются координатами некоторой известной точки A, лежащей на прямой, $\left( {x,y} \right)$ − координаты произвольной точки прямой, $\left( {{b_1},{b_2}} \right)$ − координаты вектора $\mathbf{b}$, параллельного данной прямой, t − параметр.
+\begin{center}
+\includegraphics[scale=0.4]{./pics/13.jpg}
+\end{center}
+
+$\bullet$ Расстояние от точки до прямой
+Расстояние d от точки $M\left( {{x_1},{y_1}} \right)$ до прямой $Ax + By + C = 0$ выражается формулой
+$d = \large\frac{{\left| {A{x_1} + B{y_1} + C} \right|}}{{\sqrt {{A^2} + {B^2}} }}\normalsize$.
+расстояние от точки до прямой
+\begin{center}
+\includegraphics[scale=0.4]{./pics/14.jpg}
+\end{center}
+
+$\bullet$ Параллельные прямые
+Две прямые $y = {k_1}x + {b_1} $ и $ y = {k_2}x + {b_2}$ параллельны при условии
+${k_1} = {k_2}$.
+Две прямые ${A_1}x + {B_1}y + {C_1} = 0 и {A_2}x + {B_2}y + {C_2} = 0$ параллельны, если
+$\large\frac{{{A_1}}}{{{A_2}}}\normalsize = \large\frac{{{B_1}}}{{{B_2}}}\normalsize$.
+\begin{center}
+\includegraphics[scale=0.4]{./pics/15.jpg}
+\end{center}
+
+$\bullet$ Перпендикулярные прямые
+Две прямые $y = {k_1}x + {b_1} $ и $ y = {k_2}x + {b_2}$ перпендикулярны, если
+${k_1} = - \large\frac{1}{{{k_2}}}\normalsize$ или (что эквивалентно) ${k_1}{k_2} = - 1$.
+Две прямые ${A_1}x + {B_1}y + {C_1} = 0$ и ${A_2}x + {B_2}y + {C_2} = 0$ перпендикулярны, если
+${A_1}{A_2} + {B_1}{B_2} = 0$.
+\begin{center}
+\includegraphics[scale=0.4]{./pics/16.jpg}
+\end{center}
+
+$\bullet$ Угол между прямыми  
+$\tan \varphi = \large\frac{{{k_2} - {k_1}}}{{1 + {k_1}{k_2}}}\normalsize,\;\;\cos \varphi = \large\frac{{{A_1}{A_2} + {B_1}{B_2}}}{{\sqrt {A_1^2 + B_1^2} \cdot \sqrt {A_2^2 + B_2^2} }}\normalsize$
+\begin{center}
+\includegraphics[scale=0.4]{./pics/17.jpg}
+\end{center}
+
+$\bullet$Пересечение двух прямых
+Если две прямые ${A_1}x + {B_1}y + {C_1} = 0 $ и $ {A_2}x + {B_2}y + {C_2} = 0$ пересекаются, то координаты точки пересечения равны
+${x_0} = \large\frac{{ - {C_1}{B_2} + {C_2}{B_1}}}{{{A_1}{B_2} - {A_2}{B_1}}}\normalsize,\;\;{y_0} = \large\frac{{ - {A_1}{C_2} + {A_2}{C_1}}}{{{A_1}{B_2} - {A_2}{B_1}}}\normalsize$.
+
+
 \setcounter{chapter}{45}
 \chapter{Поверхности второго порядка, метод сечения}
 
