--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -2321,6 +2321,15 @@ $\bullet$Пересечение двух прямых
 Если две прямые ${A_1}x + {B_1}y + {C_1} = 0 $ и $ {A_2}x + {B_2}y + {C_2} = 0$ пересекаются, то координаты точки пересечения равны
 ${x_0} = \large\frac{{ - {C_1}{B_2} + {C_2}{B_1}}}{{{A_1}{B_2} - {A_2}{B_1}}}\normalsize,\;\;{y_0} = \large\frac{{ - {A_1}{C_2} + {A_2}{C_1}}}{{{A_1}{B_2} - {A_2}{B_1}}}\normalsize$.
 
+\setcounter{chapter}{44}
+\chapter{Уравнение прямой в пространстве}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{enumerate}
+	\item  $\left\{\begin{array}{lcl}A_1x+B_1y+C_1z+D_1=0\quad (P_1)\\ A_2x+B_2y+C_2z+D_2=0\quad (P_2)\end{array}\right.$ - общее уравнение прямой L в пространстве, как линии пересечения двух плоскостей $P_1 и P_2.$
+	\item $\frac{x-x_0}{m}=\frac{y-y_0}{n}=\frac{z-z_0}{p}$ -  каноническое уравнение прямой L, которая проходит через точку M(x_0, y_0, z_0) параллельно вектору $\overline{S}=(m, n, p)$. Вектор $\overline S$ является направляющим вектором прямой L.
+	\item $\frac{x-x_1}{x_2-x_1}=\frac{y-y_1}{y_2-y_1}=\frac{z-z_1}{z_2-z_1}$ - уравнение прямой, которая проходит через две точки $A(x_1, y_1, z_1) $ и $ B(x_2, y_2, z_2)$. 
+	\item Приравнивая каждую из частей канонического уравнения 2 к прараметру t, получаем параметрическое уравнение прямой: $\left\{\begin{array}{lcl}x=x_0+mt\\ y=y_0+nt\\z=z_0+pt\end{array}\right$.
+\end{enumerate}
 
 \setcounter{chapter}{45}
 \chapter{Поверхности второго порядка, метод сечения}
