--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -2321,6 +2321,37 @@ $\bullet$Пересечение двух прямых
 Если две прямые ${A_1}x + {B_1}y + {C_1} = 0 $ и $ {A_2}x + {B_2}y + {C_2} = 0$ пересекаются, то координаты точки пересечения равны
 ${x_0} = \large\frac{{ - {C_1}{B_2} + {C_2}{B_1}}}{{{A_1}{B_2} - {A_2}{B_1}}}\normalsize,\;\;{y_0} = \large\frac{{ - {A_1}{C_2} + {A_2}{C_1}}}{{{A_1}{B_2} - {A_2}{B_1}}}\normalsize$.
 
+\setcounter{chapter}{43}
+\chapter{Уравнение плоскости в пространстве}
+
+Пусть в пространтве задана плоскость $Q$. Задана точкой $M_0(x_0;y_0;z_0)$ \text{и вектором} $\vec{n}$ = (A; B; C)$, перпендикулярным этой плоскости. Возьмём произвольную точку $M(x;y;z))$ на плоскости и провекторируем: $\vec{M_0 M} = (x - x_0; y - y_0; z - z_0)$. При люьой ориентации плоскости вектора взаимно перпендикулярны и, таким образом их скаоярное произведение равно 0. $\vec{M_0 M} \cdot \vec{n} = 0$
+\boxedeq{eq:*}{A(x - x_0) + B(y - y_0) + C(z - z_0) = 0}
+
+\section{общее уравнение плоcкости}
+
+\boxedeq{eq:*}{Ax + By + Cz + D = 0}
+
+\section{уравнение плоскости, проходящей через 3 точки}
+Сделаем на плоскости 3 вектора: сделаем их из точки $M(x;y;z)$. Все эти векторы компланарны $\Rightarrow (\vec{M_1 M}, [\vec{M_2 M}, \vec{M_3 M}]) = 0$ 
+
+\section{уравнение плоскости в отрезках}
+То же самое, что и по точкам, просто точки на осях. В предыдущее вкорячить эти точки и определитель определить.
+
+\section{Нормальное уравнение плоскости}
+Возьмем прямоугольную систему координат Охуz трехмерного пространства. Если плоскость удалена на расстояние $p\geq0$ в положительном направлении нормального вектора $\vec{n}$.  Возьмем за единицу длину вектора $\vec{n}$. Получим, что координатами направляющего косинуса являются $\vec{n}=(cos \alpha, cos \beta, cos \gamma)$,  тогда $|\vec{n}|=cos2 \alpha, cos2 \beta, cos2 \gamma=1$.
+
+\par Из вышесказанного получим, что определение скалярного произведения векторов по формуле $\vec{n}=(cos \alpha, cos \beta, cos \gamma); \vec{OM} =(x, y, z)$ в результате дают равенство
+$$
+(\vec{n}, \vec{OM})=|\vec{n}|\cdot|\vec{OM}| \cdot cos (\vec{n}, \hat, \vec{OM})=|\vec{n}|\cdot np\vec{n}\vec{OM}=1\cdot p=p
+$$
+Данная формула представляет скалярное произведение в координатной форме. Тогда получаем следующее выражение:
+$$
+(\vec{n}, \vec{OM})=cos \alpha \cdot x+cos \beta \cdot y+cos \gamma \cdot z
+$$
+При сопоставлении двух последних равенств получаем уравнение плоскости такого вида $cos \alpha \cdot x+cos \beta \cdot y+cos \gamma \cdot z=p.$ Упростим выражения. Для этого необходимо перенести значение p в левую сторону, получим 
+\boxedeq{eq:*}{cos \alpha \cdot x+cos \beta \cdot y+cos \gamma \cdot z-p=0.}
+Можно корячить иначе, через нормирующий множитель(домножаем общее уравнение) $\lambda = \frac{1}{\pm \sqrt{A^2 + B^2 + C^2}}$; знак берём обратным знаку свободного члена.
+
 \setcounter{chapter}{44}
 \chapter{Уравнение прямой в пространстве}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
