--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -1380,7 +1380,44 @@ $f(x_{0})=\lim_{x \to x_{0}} f(x) = 0$ и $g(x_{0})=\lim_{x \to x_{0}} g(x) = 0$
 	\end{center}
 
   \setcounter{chapter}{25}         
-
+\chapter{Формулы Тейлора и Маклорена}
+Производные высших порядков удобно использовать для приблизительных вычислений значений функций. Эти значения вычисляются по формуле Тейлора, суть которой в следующем: 
+\parРассмотрим функцию $y=f(x)$ и предположим, что она имеет производные до n-ого порядка включительно в некоторой окрестности точки $x_0$
+\parЗададимся целью найти многочлен $P_n(x)$ степени не выше, чем $n$, значение которого в окрестности точки $x_0$ очень мало отличается от значения функции $f(x)$. При это потребуем, чтобывыполнялись равенства:
+\begin{equation}
+(*)
+	\begin{cases}
+	P_n(x_0)=f(x_0),\\
+	P_n'(x_0)=f'(x_0),\\
+	P_n^{(n)}(x_0)=f_n^{(n)}(x_0)
+	\end{cases}
+\end{equation}
+\parЗапишем этот многочлен в виде $P_n(x)=A_0+A_1(x-x_0)+A_2(x-x_0)^2+...+A_n(x-x_0)^n$. Вычислим его производные:\\
+$P_n'(x)=A_1+2A_2(x-x_0)+...+nA_n(x-x_0)^{n-1}$\\
+$P_n''(x)=2A_2+6A_3(x-x_0)+...+n(n-1)A_n(x-x_0)^{n-2}$\\
+$P_n^{(n)}(x)=n!A_n$
+\parИсходя из этих равенств, а также равенств *, получаем:\\
+$A_0=P_n(x_0)=f(x_0)$\\
+$A_1=P_n'(x_0)=f'(x_0)$\\
+$A_2=\dfrac{P_n''(x_0)}{2!}=\dfrac{f_n''(x_0)}{2!}$
+\\$A_n=\dfrac{P_n^{(n)}(x_0)}{n!}=\dfrac{f_n^{(n)}(x_0)}{n!}$
+\parПодставив набор коэффициентов в определение $P_n(x)$, получим:
+\\$P_n(x)=\dfrac{f_n(x_0)}{0!}+\dfrac{f_n'(x_0)(x-x_0)}{1!}+\dfrac{f_n''(x_0)(x-x_0)^2}{2!}+...+\dfrac{f_n^{(n)}(x_0)(x-x_0)^n}{n!}$\\
+Рассмотрим погрешность вычислений с помощью многочлена $R_n(x)=f(x)-P_n(x)$. Покажем, что $P_n(x)$ есть $o(x-x_0)^n$ при $x \rightarrow x_0$.
+\parДля этого нужно показать, что\\
+$\lim \limits_{x \rightarrow x_0}\dfrac{R_n(x)}{(x-x_0)^n}=0$\\
+Вычислим этот предел, применив n раз правило Лопиталя. При этом заметим, что $R_n(x_0)=f(x_0)-P_n(x_0)=0$ (по *).\\
+$R_n'(x_0)=f'(x_0)-P_n'(x_0)=0$ и т.д.\\
+$R_n^{(n)}(x_0)=f^{(n)}(x_0)-P_n^{(n)}(x_0)=0$\\
+Таким образом имеется, что
+$\lim \limits_{x \rightarrow x_0}\dfrac{R_n(x)}{(x-x_0)^n}=[(\dfrac{0}{0})]=\lim \limits_{x \rightarrow x_0}\dfrac{R_n'(x)}{n(x-x_0)^{n-1}}=[(\dfrac{0}{0})]=...=\lim \limits_{x \rightarrow x_0}\dfrac{R_n^{(n)}(x)}{n!}=[(\dfrac{0}{n!})]=0$
+\par Получаем следующее равенство, которое называется формулой Тейлора.\\
+Для функции $y=f(x)$ в окрестности точки $x_0$ с остаточным членом в форме Пеано (любая наперед заданная точность)
+\\$f_n(x)=\dfrac{f_n(x_0)}{0!}+\dfrac{f_n'(x_0)(x-x_0)}{1!}+\dfrac{f_n''(x_0)(x-x_0)^2}{2!}+...+\dfrac{f_n^{(n)}(x_0)(x-x_0)^n}{n!}+o((x-x_0)^n)$\\
+Если рассматривать $x_0=0$, то получаем фломулу Маклорена:\\
+$f_n(x)=\dfrac{f_n(0)}{0!}+\dfrac{f_n'(0)(x)}{1!}+\dfrac{f_n''(0)(x)^2}{2!}+...+\dfrac{f_n^{(n)}(0)(x)^n}{n!}+o((x)^n)$
+\parПредположим, что функция имеет также и производную порядка $n+1$. Тогда имеет место формула, называемая формулой Тейлора с остаточным членом в форме Лагранжа:\\
+$f_n(x)=\dfrac{f_n(x_0)}{0!}+\dfrac{f_n'(x_0)(x-x_0)}{1!}+\dfrac{f_n''(x_0)(x-x_0)^2}{2!}+...+\dfrac{f_n^{(n)}(x_0)(x-x_0)^n}{n!}+\dfrac{f_n^{(n+1)}(\xi)}{(n+1)!}((x-x_0)^{n+1}),\xi \in (x_0;x)$
 \setcounter{chapter}{26}         
 \chapter{Признаки монотонности функции\\}         
 
