--- a/math_sem1.tex
+++ b/math_sem1.tex
@@ -432,7 +432,23 @@ $\Rightarrow \lim_{n \rightarrow \infty}{x_n = a} \Leftrightarrow$ в сколь
 \item Если $\{x_n\}$ б.б.п., то $\exists n_0 \in \mathbb{N}:x_n \neq 0,  \forall n\geq n_0$ и последовательность $ \{\frac{1}{x_n}\}^\infty_{n=n_0}$ - б.м.п
 \end{enumerate}
 
+\setcounter{chapter}{6}
+\chapter{Монотонные последовательности. Теорема Вейерштрассе}
+\section{Монотонные последовательности}
+\textbf{Монотонная последовательность} — это последовательность, элементы которой с увеличением номера не убывают, или, наоборот, не возрастают. Подобные последовательности часто встречаются при исследованиях и имеют ряд отличительных особенностей и дополнительных свойств. Последовательность из одного числа не может считаться возрастающей или убывающей. 
+Виды монотонные последовательностей:
+\begin{enumerate}
+  \item Последовательность ${x_{n}}$  элементов множества X называется \textbf{неубывающей}, если каждый элемент этой последовательности не превосходит следующего за ним.  
+  \item Последовательность ${x_{n}}$  элементов множества X называется \textbf {невозрастающей}, если каждый следующий элемент этой последовательности не превосходит предыдущего.
+  \item Последовательность ${x_{n}}$  элементов множества X называется \textbf{возрастающей}, если каждый следующий элемент этой последовательности превышает предыдущий. 
+  \item Последовательность ${x_{n}}$  элементов множества X называется \textbf{убывающей}, если каждый элемент этой последовательности превышает следующий за ним.   
+\end{enumerate}
 
+Последовательность называется \textbf{монотонной}, если она является неубывающей, либо невозрастающей.
+
+Последовательность называется \textbf{строго монотонной}, если она является возрастающей, либо убывающей. 
+\section{Теорема Вейерштрассе}
+\begin{thm}Теорема Вейерштрасса об ограниченной сверху возрастающей последовательности (или ограниченной снизу убывающей последовательности) утверждает, что любая ограниченная сверху монотонно возрастающая (или ограниченная снизу монотонно убывающая) последовательность имеет предел, причём этот предел равен её точной верхней (или нижней) грани. Несмотря на прозрачность и очевидность доказательства, эта теорема оказывается очень удобной для нахождения пределов многих последовательностей или хотя бы доказательства их существования. \end{thm}
 
 \setcounter{chapter}{7}
 \chapter{Число е}
